fix: page width overflow (#588)
* fix: remove 100vw as redundant

* feat: clean up comments

--- a/eds/blocks/media-gallery/media-gallery.css
+++ b/eds/blocks/media-gallery/media-gallery.css
@@ -1,7 +1,3 @@
-.media-gallery-wrapper {
-  inline-size: 100vw;
-}
-
 .media-gallery {
   ul {
     display: grid;
